--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^27.0.3",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -53,11 +53,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
     "@types/react-redux": "^7.1.20",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
