--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.15",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-transition-group": "1.x",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
